Fixed some styles in the toolbar area, and moved toolbar buttons out of frame hopefully improving a clipping issue

--- a/src/Mvc/MvcTemplates/N2/Resources/Css/default.css
+++ b/src/Mvc/MvcTemplates/N2/Resources/Css/default.css
@@ -8,20 +8,16 @@ body .frameForm { position:absolute; top:46px; bottom:0px; width:100%; overflow:
 .toolbox { font-size: 10px; font-family: 'Lucida Console', Monaco, monospace; }
     .toolbox .item { float:left; text-align:center; border-left:solid 1px #fff; border-right:solid 1px #d8d8d8; background-color:#fff; }
         .toolbox .item .command { text-decoration:none; background-repeat:no-repeat; background-position:50% bottom; }
-        .toolbox .item .command:hover { background-image:url(../../Resources/Img/toolbar_button_bg_hover.png); }
         .toolbox .item.selected .command { background-color:#fff; background-image:none; color:#000; cursor:auto; }
         .toolbox .item.selected .command:hover { background-image:none; }
-			.toolbox .item .command a { padding:4px 5px 3px 22px; color:#6F6F6F; display:block; height:18px; line-height:18px; color:#6F6F6F; text-decoration:none; background:transparent none no-repeat 3px 50%; }
-			.toolbox .item .command a:hover { color:#000; }
-	#pageTools .toolbox .item {height: 30px;}
-		#pageTools .toolbox .item .command a {min-width: 0;position: relative;top: 3px;}
+			.toolbox .item .command a { padding:10px 5px 4px 22px; color:#6F6F6F; display:block; height:16px; color:#6F6F6F; text-decoration:none; background:transparent none no-repeat 3px 50%; display:block; }
+			.toolbox .item .command a:hover { background-color: #DDD; color:#000; }
 
 .ui-layout-north { z-index: 100 !important; }
-.header { background:transparent url(../../Resources/Img/darken10.png) repeat-x 0px bottom; padding-top: 10px;}
+.header { padding-top: 10px;}
     .header .toolbox { float:left; border-bottom:none; margin-right:10px; }
-        .header .toolbox .item { background:#fff url(../../Resources/Img/lighten10.png) repeat-x 0 50%; }
-            .header .toolbox .item .command:hover { background-image:url(../../Resources/Img/toolbar_button_bg_hover.png); }
-	            .header .toolbox .item .command a { padding:18px 4px 4px 4px; min-width:32px; height:12px; overflow:hidden; position:relative; background-position:50% 3px; }
+		.header .toolbox .item { background:#fff url(../../Resources/Img/lighten10.png) repeat-x 5px 50%; }
+	            .header .toolbox .item .command a { padding:22px 4px 0 4px; min-width:32px; height:12px; overflow:hidden; position:relative; background-position:50% 3px; }
 
 #top .logo{ position:absolute; right:10px; top:5px; height:30px; }
 #top .logout { color: #FFFFFF;display: block;float: right;margin-right: 60px;padding: 8px; }
@@ -32,7 +28,7 @@ body .frameForm { position:absolute; top:46px; bottom:0px; width:100%; overflow:
 
 #sort { height:25px; width:28px; padding:0; background-image:none; }
     #sort .command { padding:0; }
-        #sort a { display:block; height:10px; padding:0 5px; border-top:solid 1px #fff; background-position:50% 50%; }
+        #sort a { display:block; height:14px; padding:0 5px; border-top:solid 1px #fff; background-position:50% 50%; }
         #sort .up { border-bottom:solid 1px #d8d8d8; }
 
 #search{ background:transparent; padding:0; margin-left:10px;position: absolute;right: 130px; }
@@ -47,6 +43,8 @@ body .frameForm { position:absolute; top:46px; bottom:0px; width:100%; overflow:
 .ui-layout-pane iframe{ width:100%; height:100%; }
 .ui-layout-resizer { border:solid 1px #ccc}
 	.ui-layout-toggler { outline:dotted 1px #999; background:transparent url(../img/shading.png); }
+
+.contentTools {border-bottom: 1px solid #D8D8D8;height: 30px; background:#fff; }
 
 /* sub bar blinds */
 
@@ -90,22 +88,21 @@ body .frameForm { position:absolute; top:46px; bottom:0px; width:100%; overflow:
     background-image:none;
 }
 
-#pageTools {border-bottom: 1px solid #D8D8D8;height: 30px;}
 
 
 
 
 /* button/option drop down */
 #top .toolbox .commandOptions,
-#pageTools .toolbox .commandOptions {
+.contentTools .toolbox .commandOptions {
 	position:relative;
 }
     #top .toolbox .commandOptions a,
-    #pageTools .toolbox .commandOptions a {
+    .contentTools .toolbox .commandOptions a {
     	float:left;
     }
     #top .toolbox .commandOptions .opener,
-    #pageTools .toolbox .commandOptions .opener {
+    .contentTools .toolbox .commandOptions .opener {
 		text-indent:-10000px;
 		width:13px;
 	    float:left;
@@ -116,43 +113,44 @@ body .frameForm { position:absolute; top:46px; bottom:0px; width:100%; overflow:
 		background:transparent url(../icons/bullet_arrow_up.png) no-repeat 50% 50%;
 	    height:25px;
     }
-    #pageTools .toolbox .commandOptions .opener
+    .contentTools .toolbox .commandOptions .opener
     {
     	height: 30px;
 	    width:18px;
     }
+    #top .toolbox .commandOptions .opener:hover,
+	.contentTools .toolbox .commandOptions .opener:hover {
+		background-color: #ddd;
+	}
     #top #topbar .toolbox .commandOptions .opener {
 	    height:34px;
 	    width:18px;
     }
     #top .toolbox .closed .opener,
-    #pageTools .toolbox .closed .opener {
+    .contentTools .toolbox .closed .opener {
 		background:transparent url(../icons/bullet_arrow_down.png) no-repeat 50% 50%;
     }
     #top .toolbox .optionGroup,
-    #pageTools .toolbox .optionGroup {
+    .contentTools .toolbox .optionGroup {
 	    padding:0 1px;
 	    position:absolute;
 	    top:0;
 	    left:-2px;
 	    z-index:9009;
-    }
-    #pageTools .toolbox .optionGroup
-    {
-    	top: 2px;
+        border-bottom:solid 1px #ddd;
     }
     #top .toolbox .closed .optionGroup,
-    #pageTools .toolbox .closed .optionGroup {
+    .contentTools .toolbox .closed .optionGroup {
 	    top:-9999px;
 	    left:-9999px;
     }
 
         #top .toolbox .commandOptions .option,
-        #pageTools .toolbox .commandOptions .option {
+        .contentTools .toolbox .commandOptions .option {
         	display:none;
         }
         #top .toolbox .commandOptions .optionGroup a,
-        #pageTools .toolbox .commandOptions .optionGroup a {
+        .contentTools .toolbox .commandOptions .optionGroup a {
 	        float:none;
 	        display:block;
 	        width:280px;
@@ -161,28 +159,25 @@ body .frameForm { position:absolute; top:46px; bottom:0px; width:100%; overflow:
 			visibility:hidden;
         }
         #top .toolbox .commandOptions .optionGroup .option,
-        #pageTools .toolbox .commandOptions .optionGroup .option {
+        .contentTools .toolbox .commandOptions .optionGroup .option {
         	visibility:visible;
         	height:auto;
-        	padding:1px 4px;
+        	padding:2px 4px;
         	border:solid 1px #ddd;
         	border-bottom-style:none;
 			background-color:#fff;
 			font-family:Arial,Sans-Serif;
 			font-size:10px;
         	padding-left:16px;
+			box-shadow: 0px 5px 5px 1px rgba(0, 0, 0, .2); 
         }
-        #top .toolbox .commandOptions .optionGroup .option.selected,
-        #pageTools .toolbox .commandOptions .optionGroup .option.selected {
+		#top .toolbox .commandOptions .optionGroup .option:hover,
+		.contentTools .toolbox .commandOptions .optionGroup .option:hover {
+			color:#000;
+			background-color:#f8f8f8;
+		}
+		#top .toolbox .commandOptions .optionGroup .option.selected,
+        .contentTools .toolbox .commandOptions .optionGroup .option.selected {
 			background: #f4f4f4 url(../icons/bullet_yellow.png) no-repeat 0% 50%;
         	font-weight: bold;
         }
-    #top .toolbox .commandOptions .opener:hover,
-    #pageTools .toolbox .commandOptions .opener:hover {
-    }
-
-/* custom */
-#edit a
-{
-	min-width:50px;
-}
